--- a/test/client-stacked-area.html
+++ b/test/client-stacked-area.html
@@ -11,9 +11,7 @@
 
         function makeTestSettings() {
             let settings = {};
-            let now = moment(NOW);
             settings.data = makeTestData();
-            settings.keys = ['Lowest', 'Low', 'Medium', 'High', 'Highest'];
             settings.svg = document.getElementById('actual1');
             settings.title = 'Testing the Stacked Area Chart';
             settings.markers = [{date: moment(NOW).subtract(3, 'days')}];
@@ -27,6 +25,7 @@
         function makeTestData() {
             let testData = {};            
             testData.entries = [];
+            testData.keys = ['Lowest', 'Low', 'Medium', 'High', 'Highest'];
             testData.entries.push({
                 date: moment(NOW).subtract(8, 'days'),
                 Highest: 2,
